2007-11-01  Andy Wingo  <wingo@pobox.com>

	* Makefile.am:
	* doc/: Add documentation, generated from upstream gtk-doc.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/libgnome-spec.scm (initialize): Load libgnome.defs.

	* gnome/overrides/Makefile.am (module_DATA): 
	* gnome/overrides/libgnome.defs: Renamed from gnome.defs. Update
	to deal with new generated libgnome.defs for libgnome 2.16.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/libgnome-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper.

2006-08-13  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/libgnome-spec.scm (gnome): Use (g-wrap guile); seems to
	prevent problems with some g-wrap versions.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2004-12-06  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.97 ==

2004-11-15  Andy Wingo  <wingo@pobox.com>

	* package.ac: Add record_check.

2004-10-28  Andy Wingo  <wingo@pobox.com>

	* glib-checks.ac:
	* defs-checks.ac: Versioned pkg-config check.

2004-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/Makefile.am (guilegnomelib_LTLIBRARIES): Install to
	versioned directory.

2004-09-27  Andy Wingo  <wingo@pobox.com>

	* gnome/gnome.scm: Avoid deprecated modules.

2004-09-26  Andy Wingo  <wingo@pobox.com>
