@@ -1,0 +1,4 @@
+include ../../tests.mk
+
+wrapset_stem = libgnome
+top_module_name = (gnome gnome)
