@@ -1,0 +1,128 @@
+(module-api
+  (version 1 0)
+  ((gnome gnome)
+   (uses-interfaces (gnome gw libgnome))
+   (typed-exports
+     (gnome-program-init procedure (arity 2 0 #t))))
+  ((gnome gobject generics)
+   (uses-interfaces)
+   (typed-exports
+     (block generic (<gtype-instance> <top>))
+     (connect
+       generic
+       <top>
+       (<gtype-instance> <symbol> <procedure>))
+     (connect-after
+       generic
+       (<gtype-instance> <symbol> <procedure>))
+     (connected? generic (<gtype-instance> <top>))
+     (create-signal
+       generic
+       (<gtype-class> <symbol> <top> <top>))
+     (disconnect generic (<gtype-instance> <top>))
+     (emit generic
+           (<gtype-instance> <symbol> . <top>))
+     (find-property generic (<gtype-class> <symbol>))
+     (get generic (<gobject> <symbol>))
+     (get-properties generic (<gtype-class>))
+     (get-property-names generic (<gtype-class>))
+     (get-signals generic (<gtype-class>))
+     (invoke generic (<gclosure> . <top>))
+     (set generic (<gobject> <symbol> <top>))
+     (unblock generic (<gtype-instance> <top>))))
+  ((gnome gw generics)
+   (uses-interfaces (gnome gobject generics))
+   (typed-exports))
+  ((gnome gw libgnome)
+   (uses-interfaces (gnome gw generics))
+   (typed-exports
+     (%gnome-program-init procedure (arity 0 0 #t))
+     (<char**> <gw:wct>)
+     (<g-object-get-property-func> <gw:wct>)
+     (<g-object-set-property-func> <gw:wct>)
+     (<gchar***> <gw:wct>)
+     (<gfloat**> <gw:wct>)
+     (<gnome-module-info*> <gw:wct>)
+     (<gnome-program-class*> <gw:wct>)
+     (<gs-list**> <gw:wct>)
+     (<popt-context> <gw:wct>)
+     (<time-t**> <gw:wct>)
+     (gnome-clearenv procedure (arity 0 0 #t))
+     (gnome-execute-shell procedure (arity 0 0 #t))
+     (gnome-execute-shell-fds
+       procedure
+       (arity 0 0 #t))
+     (gnome-execute-terminal-shell
+       procedure
+       (arity 0 0 #t))
+     (gnome-execute-terminal-shell-fds
+       procedure
+       (arity 0 0 #t))
+     (gnome-gconf-get-app-settings-relative
+       procedure
+       (arity 0 0 #t))
+     (gnome-gconf-get-gnome-libs-settings-relative
+       procedure
+       (arity 0 0 #t))
+     (gnome-help-display procedure (arity 2 0 #f))
+     (gnome-help-display-desktop
+       procedure
+       (arity 4 0 #f))
+     (gnome-help-display-uri procedure (arity 1 0 #f))
+     (gnome-help-display-with-doc-id
+       procedure
+       (arity 4 0 #f))
+     (gnome-i18n-pop-c-numeric-locale
+       procedure
+       (arity 0 0 #t))
+     (gnome-i18n-push-c-numeric-locale
+       procedure
+       (arity 0 0 #t))
+     (gnome-program-get procedure (arity 0 0 #t))
+     (gnome-program-get-app-id
+       procedure
+       (arity 0 0 #t))
+     (gnome-program-get-app-version
+       procedure
+       (arity 0 0 #t))
+     (gnome-program-get-human-readable-name
+       procedure
+       (arity 0 0 #t))
+     (gnome-program-install-property
+       procedure
+       (arity 0 0 #t))
+     (gnome-program-locate-file
+       procedure
+       (arity 0 0 #t))
+     (gnome-program-module-register
+       procedure
+       (arity 0 0 #t))
+     (gnome-program-module-registered
+       procedure
+       (arity 0 0 #t))
+     (gnome-program-parse-args
+       procedure
+       (arity 0 0 #t))
+     (gnome-program-postinit procedure (arity 0 0 #t))
+     (gnome-program-preinit procedure (arity 0 0 #t))
+     (gnome-score-get-notable
+       procedure
+       (arity 0 0 #t))
+     (gnome-score-log procedure (arity 0 0 #t))
+     (gnome-setenv procedure (arity 0 0 #t))
+     (gnome-sound-init procedure (arity 0 0 #t))
+     (gnome-sound-play procedure (arity 0 0 #t))
+     (gnome-sound-sample-load
+       procedure
+       (arity 0 0 #t))
+     (gnome-sound-shutdown procedure (arity 0 0 #t))
+     (gnome-unsetenv procedure (arity 0 0 #t))
+     (gnome-url-show procedure (arity 1 0 #f))
+     (gnome-user-accels-dir-get
+       procedure
+       (arity 0 0 #t))
+     (gnome-user-dir-get procedure (arity 0 0 #t))
+     (gnome-user-private-dir-get
+       procedure
+       (arity 0 0 #t))
+     (gnome-util-user-shell procedure (arity 0 0 #t)))))
